--- a/cfn-templates/dh.cform.openvpn-ec2-priv.yaml
+++ b/cfn-templates/dh.cform.openvpn-ec2-priv.yaml
@@ -135,10 +135,12 @@ Resources:
             - configMisc
             - configRepo
             - configYum
+            - configHardenSsh
             - configIPtables
             - configLogs
-            - configHardenSsh
             - configEasyRSA
+#            - configOpenvpn
+
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #        configTemplate:
 #          packages: {}
@@ -161,17 +163,17 @@ Resources:
             sysvinit:
               network:
                 ensureRunning: "true"
-                enables: "true"
+                enabled: "true"
                 commands:
                   - "1_dhcpv6"
               chronyd:
                 ensureRunning: "true"
-                enables: "true"
+                enabled: "true"
                 commands:
                   - "2_timePool"
               systemd-journald:
                 ensureRunning: "true"
-                enables: "true"
+                enabled: "true"
                 commands:
                   - "3_persistLogs"
 
@@ -202,9 +204,56 @@ Resources:
             sysvinit:
               yum-cron:
                 ensureRunning: "true"
-                enables: "true"
+                enabled: "true"
                 commands:
                   - "1b_yumCron"
+
+
+#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+        configHardenSsh:
+          packages:
+            yum:
+              fail2ban: []
+          sources:
+            /tmp: "https://s3.eu-central-1.amazonaws.com/dh.scripts/ssh/dh.cform.openvpn-ec2-harden-ssh.sh.tar.gz"
+          files:
+            "/etc/fail2ban/jail.local":
+              content: |
+                [sshd]
+                enabled = true
+                ignoreip = 127.0.0.1/8
+                bantime = 600
+                findtime = 600
+                maxretry = 3
+                banaction = iptables-multiport
+                #mode = aggressive
+              mode: '000644'
+              owner: root
+              group: root
+          commands:
+            fail2ban:
+              cwd: "/etc/fail2ban/jail.d"
+              command: "mv 00-firewalld.conf 00-firewalld.disable"
+            HardenSsh:
+              cwd: "/tmp/ssh-scripts"
+              command: "./dh.cform.openvpn-ec2-harden-ssh.sh"
+          services:
+            sysvinit:
+              firewalld:
+                ensureRunning: "false"
+                enabled: "false"
+              fail2ban: 
+                enabled: "true"
+                ensureRunning: "true"
+                files:
+                  - "/etc/fail2ban/jail.local"
+                commands: 
+                  - "fail2ban"
+              sshd:
+                enabled: "true"
+                ensureRunning: "true"
+                commands:
+                  - "HardenSsh"
 
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
@@ -217,7 +266,7 @@ Resources:
           files:
             "/etc/sysctl.d/30-dh.iptables.conf":
               content: |
-                net.ipv4.ip_forward = 0
+                #net.ipv4.ip_forward = 1
                 net.ipv6.conf.default.disable_ipv6 = 1
                 net.ipv6.conf.all.disable_ipv6 = 1
                 kernel.randomize_va_space = 1
@@ -235,12 +284,9 @@ Resources:
               command: "./dh.cform.openvpn-ec2-priv-iptables.sh"
           services:
             sysvinit:
-              firewalld:
-                ensureRunning: "false"
-                enables: "false"
               iptables:
                 ensureRunning: "true"
-                enables: "true"
+                enabled: "true"
                 commands:
                   - "2_iptRules"
 
@@ -290,47 +336,9 @@ Resources:
             sysvinit:
               rsyslog:
                 ensureRunning: "true"
-                enables: "true"
+                enabled: "true"
                 files:
                   - "/etc/rsyslog.d/30-iptables.conf"
-
-
-#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-        configHardenSsh:
-          packages:
-            yum:
-              fail2ban: []
-          sources:
-            /tmp: "https://s3.eu-central-1.amazonaws.com/dh.scripts/ssh/dh.cform.openvpn-ec2-harden-ssh.sh.tar.gz"
-          files:
-            "/etc/fail2ban/jail.local":
-              content: |
-                [sshd]
-                enabled = true
-                ignoreip = 127.0.0.1/8
-                bantime = 600
-                findtime = 600
-                maxretry = 3
-                banaction = iptables-multiport
-              mode: '000644'
-              owner: root
-              group: root
-          commands:
-            HardenSsh:
-              cwd: "/tmp/ssh-scripts"
-              command: "./dh.cform.openvpn-ec2-harden-ssh.sh"
-          services:
-            sysvinit:
-              fail2ban: 
-                enables: "true"
-                ensureRunning: "true"
-                files:
-                  - "/etc/fail2ban/jail.local"
-              sshd:
-                enables: "true"
-                ensureRunning: "true"
-                commands:
-                  - "HardenSsh"
 
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
@@ -378,6 +386,39 @@ Resources:
               cwd: "/usr/local/easy-rsa/pki/issued"
               command: "tar -czf - ca.crt *.client.crt | aws s3 cp - s3://dh.scripts/easyrsa/openvpn/issued-certs/dh.easyrsa.openvpn.issued-certs.client.tar.gz"
 #              command: 'tar --transform "s/.*\///g" -zcf - ca.crt issued/*.client.crt | aws s3 cp - s3://dh.scripts/easyrsa/openvpn/issued-certs/dh.easyrsa.openvpn.issued-certs.client.tar.gz'
+
+
+#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+#        configOpenvpn:
+#          packages:
+#            yum:
+#              openvpn: []
+#          sources:
+#            /etc/openvpn/server: "https://s3.eu-central-1.amazonaws.com/dh.scripts/openvpn/server/dh.vpn.server.xxx1194.conf.tar.gz"
+#          files:
+#            "/usr/local/bin/vpn-server-status":
+#              content: |
+#                #!/bin/bash
+#                systemctl status openvpn-server@dh.vpn.server.udp1194
+#                systemctl status openvpn-server@dh.vpn.server.tcp1194
+#                journalctl -u openvpn-server@dh.vpn.server.udp1194
+#                journalctl -u openvpn-server@dh.vpn.server.tcp1194
+#              mode: '000755'
+#              owner: ec2-user
+#              group: ec2-user
+#          commands:
+#            1a_gen-HMAC:
+#              cwd: "/etc/openvpn/server"
+#              command: "openvpn --genkey --secret HMAC-sig.key"
+#            1b_gen-HMAC:
+#              cwd: "/etc/openvpn/server"
+#              command: "aws s3 cp HMAC-sig.key s3://dh.scripts/openvpn/client/"
+#            2_enableLogTimestamps:
+#              cwd: "/usr/lib/systemd/system"
+#              command: "cp openvpn-server@.service openvpn-server@.service.bak;sed -i 's/ --suppress-timestamps//g' openvpn-server@.service"
+#            3_addPATH:
+#              command: |
+#                printf '\nPATH="/usr/local/bin:$PATH"\n' >> /home/ec2-user/.bashrc
 
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
