Functional Target Group associated with Autoscaling Group and Network Load Balancer.

--- a/cfn-templates/dh.cform.openvpn-ec2-lt.yaml
+++ b/cfn-templates/dh.cform.openvpn-ec2-lt.yaml
@@ -67,7 +67,7 @@ Resources:
             Tags:
               -
                 Key: "Name"
-                Value: "openvpn-ASG"
+                Value: "openvpn-autoscaled-instance"
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 
 
