--- a/cfn-templates/dh.cform.openvpn-ec2-priv.yaml
+++ b/cfn-templates/dh.cform.openvpn-ec2-priv.yaml
@@ -139,7 +139,7 @@ Resources:
             - configIPtables
             - configLogs
             - configEasyRSA
-#            - configOpenvpn
+            - configOpenvpn
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #        configTemplate:
@@ -225,8 +225,8 @@ Resources:
                 bantime = 600
                 findtime = 600
                 maxretry = 3
+                mode = aggressive
                 banaction = iptables-multiport
-                #mode = aggressive
               mode: '000644'
               owner: root
               group: root
@@ -389,36 +389,23 @@ Resources:
 
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-#        configOpenvpn:
-#          packages:
-#            yum:
-#              openvpn: []
-#          sources:
-#            /etc/openvpn/server: "https://s3.eu-central-1.amazonaws.com/dh.scripts/openvpn/server/dh.vpn.server.xxx1194.conf.tar.gz"
-#          files:
-#            "/usr/local/bin/vpn-server-status":
-#              content: |
-#                #!/bin/bash
-#                systemctl status openvpn-server@dh.vpn.server.udp1194
-#                systemctl status openvpn-server@dh.vpn.server.tcp1194
-#                journalctl -u openvpn-server@dh.vpn.server.udp1194
-#                journalctl -u openvpn-server@dh.vpn.server.tcp1194
-#              mode: '000755'
-#              owner: ec2-user
-#              group: ec2-user
-#          commands:
-#            1a_gen-HMAC:
-#              cwd: "/etc/openvpn/server"
-#              command: "openvpn --genkey --secret HMAC-sig.key"
-#            1b_gen-HMAC:
-#              cwd: "/etc/openvpn/server"
-#              command: "aws s3 cp HMAC-sig.key s3://dh.scripts/openvpn/client/"
-#            2_enableLogTimestamps:
-#              cwd: "/usr/lib/systemd/system"
-#              command: "cp openvpn-server@.service openvpn-server@.service.bak;sed -i 's/ --suppress-timestamps//g' openvpn-server@.service"
-#            3_addPATH:
-#              command: |
-#                printf '\nPATH="/usr/local/bin:$PATH"\n' >> /home/ec2-user/.bashrc
+        configOpenvpn:
+          commands:
+            1_cmd: 
+              cwd: "/tmp"
+              command: "mkdir openvpn-client-files"
+            2_cmd:
+              cwd: "/tmp/openvpn-client-files"
+              command: "cp /usr/local/easy-rsa/pki/ca.crt ."
+            3_cmd:
+              cwd: "/tmp/openvpn-client-files"
+              command: "cp /usr/local/easy-rsa/pki/issued/*.client.crt ."
+            4_cmd:
+              cwd: "/tmp/openvpn-client-files"
+              command: 'aws s3 sync s3://dh.scripts/openvpn/client/ . --exclude "*" --include "*.key"'
+            5_cmd:
+              cwd: "/tmp/openvpn-client-files"
+              command: "tar -czf - * | aws s3 cp - s3://dh.scripts/openvpn/client/openvpn-client-files.tar.gz"
 
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
@@ -435,7 +422,7 @@ Outputs:
 
 #--- Private Instance ID
 #-------------------------------------------
-  InstanceIdPrivateNested:
+  PrivEC2InstanceId:
     Description: Stack1 Private Instance ID
     Value:
       Ref: PrivateEC2Instance
