--- a/cfn-templates/dh.cform.openvpn-ec2-pub-2.yaml
+++ b/cfn-templates/dh.cform.openvpn-ec2-pub-2.yaml
@@ -66,7 +66,7 @@ Resources:
       Tags:
         -
           Key: "Name"
-          Value: "openvpn-pub-stage2"
+          Value: "openvpn-public-2"
 #.............................
       AvailabilityZone:
         'Fn::Select':
@@ -163,7 +163,7 @@ Outputs:
 
 #--- Public Instance ID
 #-------------------------------------------
-  InstanceIdPubStage2Nested:
+  Pub2EC2InstanceId:
     Description: Public Instance ID
     Value:
       Ref: PublicEC2Instance
